--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   <section id="cursos">
     <div class="container mx-auto mt-[198px] grid grid-cols-1 md:grid-cols-12 gap-5">
       <div id="title-curso" class="md:col-span-7 p-5">
-        <h2 id="course-title-principals" class="space-g md:sticky top-[50px] text-white text-4xl md:text-5xl lg:text-6xl xl:text-[200px]">CURSOS E APRIMORAMENTOS</h2>
+        <h2 id="course-title-principals" class="space-g md:sticky top-[50px] gray-text text-4xl md:text-5xl lg:text-6xl xl:text-7xl">CURSOS E APRIMORAMENTOS</h2>
       </div>
       <div id="grid-cursos" class="md:col-span-5 flex flex-col gap-10">
         <div class="curso">
