--- a/index.html
+++ b/index.html
@@ -18,9 +18,13 @@
   <section aria-label="Apresentação" class="grid relative grid-cols-1 lg:grid-cols-2 w-[100%] h-[100vh] p-0 m-0 justify-center items-center">
     <div class="profile-area bg-blur-dark z-[1] w-[100%] h-[100%] flex items-center justify-center">
       <div class="profile-info  flex gap-3 flex-col p-5">
-        <p id="saudacao" class="lg:text-3xl sm:text-2xl text-2xl  text-white">Olá <span class="blue-text font-bold">eu sou</span></p>
-        <h1 id="nome" class="lg:text-6xl sm:text-5xl text-4xl space-g text-white">Felipe B. Freitas</h1>
-        <p id="cargo-apresentacao" class="lg:text-4xl sm:text-3xl text-2xl gray-text">Engenheiro Civil</p>
+        <p id="saudacao" class="lg:text-3xl sm:text-2xl text-2xl  text-white">Olá <span class="blue-text">eu sou</span></p>
+        <h1 id="nome" class="font-bold lg:text-6xl sm:text-5xl text-4xl space-g text-white">Felipe B. Freitas</h1>
+        <p id="cargo-apresentacao" class="lg:text-4xl sm:text-3xl text-2xl text-gray-400">Engenheiro Civil</p>
+        <div id="social" class=" mt-5 flex items-center gap-6">
+          <a href="https://www.instagram.com/eng.felipe_b.freitas/" target="_blank" class="gray-text poppins flex items-center gap-1"><img src="./src/img/icons/InstagramLogo.svg" alt="">Instagram</a>
+          <a href="https://www.linkedin.com/in/felipe-bortoletti-freitas-119a981a9/" target="_blank" class="gray-text poppins flex items-center gap-1"><img src="./src/img/icons/LinkedinLogo.svg" alt="">LinkedIn</a>
+        </div>
       </div>
     </div>
 
@@ -35,9 +39,9 @@
     <div class="container mx-auto grid lg:grid-cols-12 grid-cols-1">
       <div id="about-me" class="lg:col-span-8 flex flex-col gap-3 p-5 md:p-10">
         <h2 id="title_aboutme" class="space-g mb-4 text-4xl text-white font-bold md:text-6xl lg:text-6xl">Sobre Mim</h2>
-        <p class="about-text poppins md:text-xl lg:text-2xl gray-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio atque quaerat dignissimos deserunt, vel unde! Illo, recusandae tempora assumenda quasi delectus cum sit quo error tempore dolorum iure, temporibus culpa quae reprehenderit! Adipisci nihil, eveniet quod consequuntur exercitationem nisi omnis placeat magnam blanditiis modi molestiae praesentium voluptatem numquam laudantium rerum vitae mollitia itaque ut optio iusto iure minima eum ea autem? Natus earum aliquid tenetur laborum at est, quas nemo dicta labore corrupti molestias nulla veritatis consectetur expedita, sit magni, nisi eos officia deleniti dignissimos ut vel impedit. Quod nulla delectus reprehenderit aliquam quisquam adipisci corporis non corrupti quibusdam eos.</p>
+        <p class="about-text poppins md:text-xl lg:text-2xl gray-text">Nasci em Araçatuba, SP, no dia 31/08/1999, e aos meus 24 anos, celebro a conclusão do bacharelado em Engenharia Civil no Centro Universitário Católico Unisalesiano Auxilium, em dezembro de 2023. Para além dos títulos, carrego comigo uma essência moldada por características que permeiam minha jornada.</p>
 
-        <p class="about-text poppins md:text-xl lg:text-2xl gray-text  ">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio atque quaerat dignissimos deserunt, vel unde! Illo, recusandae tempora assumenda quasi delectus cum sit quo error tempore dolorum iure, temporibus culpa quae reprehenderit! Adipisci nihil, eveniet quod consequuntur exercitationem nisi omnis placeat magnam blanditiis modi molestiae praesentium voluptatem numquam laudantium rerum vitae mollitia itaque ut optio iusto iure minima eum ea autem? Natus earum aliquid tenetur laborum at est, quas nemo dicta labore corrupti molestias nulla veritatis consectetur expedita, sit magni, nisi eos officia deleniti dignissimos ut vel impedit. Quod nulla delectus reprehenderit aliquam quisquam adipisci corporis non corrupti quibusdam eos.</p>
+        <p class="about-text poppins md:text-xl lg:text-2xl gray-text  ">Com uma facilidade incrível para me adaptar, sou movido por relações interpessoais sólidas, buscando construir conexões significativas em cada interação. A proatividade e a comunicação estão entre as minhas principais ferramentas, impulsionando-me a aprender e crescer constantemente. Sou flexível e dinâmico, encarando desafios como oportunidades de evolução. A resolução de problemas tornou-se uma arte para mim, combinando conhecimento técnico com uma pitada de criatividade. Estou ansioso para aplicar essa bagagem no universo da Engenharia Civil, contribuindo para projetos inovadores e enfrentando desafios com uma abordagem resolutiva e cheia de entusiasmo.</p>
       </div>
 
 
@@ -126,7 +130,24 @@
     </div>
   </section>
 
+
+
+  <section id="particles-js" class="h-[100vh] w-[100%] overflow-hidden relative">
+
+    <div class="w-[100%] lg:w-[900px] sm:w- phrase overflow-hidden">
+      <h2 class="text-white space-g text-2xl sm:text-3xl md:text-4xl lg:text-5xl">"Aprender é a única coisa de que a mente nunca se cansa, nunca tem medo e nunca se arrepende."</h2>
+      <p class="text-white poppins text-nowrap">- Leonardo da Vinci</p>
+    </div>
+    <footer class="p-5">
+      <p class="text-white text-center">Todos os direitos reservados  &copy; Felipe B. Freitas</p>
+    </footer>
+  </section>
+
+  
+
 </body>
 <script src="./src/js/animations.js"></script>
+<script src="./src/js/particles.js"></script>
+<script src="./src/js/app.js"></script>
 
 </html>
