--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Meta Tags de Compartilhamento -->
   <meta property="og:title" content="Meu Currículo - Felipe B.">
   <meta property="og:description" content="Olá seja bem-vindos ao meu currículo online.">
-  <meta property="og:image" content="./src/img/profile/icon-share">
+  <meta property="og:image" content="./src/img/profile/icon-share.jpg">
 
   <!-- Meta Tags de Autor -->
   <meta name="author" content="Felipe B. Freitas">
