--- a/index.html
+++ b/index.html
@@ -6,12 +6,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Meta Tags de Compartilhamento -->
-  <meta property="og:title" content="Meu Currículo - Felipe B.">
+  <meta property="og:title" content="Meu Currículo - Felipe B. Freitas">
   <meta property="og:description" content="Olá seja bem-vindos ao meu currículo online.">
   <meta property="og:image" content="./src/img/profile/icon-share.jpg">
 
+
+  <meta property="og:image" content="URL_da_Imagem">
+  <meta property="og:url" content="https://igormarques2019.github.io/felipe_portfolio/">
+  <meta property="og:type" content="website">
   <!-- Meta Tags de Autor -->
   <meta name="author" content="Felipe B. Freitas">
+  
+
+
+
+
+
 
   <link rel="stylesheet" href="./src/output.css">
   <link rel="stylesheet" href="./src/css/index.css">
