--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Meta Tags de Compartilhamento -->
   <meta property="og:title" content="Meu Currículo - Felipe B. Freitas">
   <meta property="og:description" content="Olá seja bem-vindos ao meu currículo online.">
-  <meta property="og:image" content="./src/img/profile/icon-share.jpg">
+  <meta property="og:image" content="https://imgur.com/a/xOYAwcB">
 
 
   <meta property="og:image" content="URL_da_Imagem">
