--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <meta property="og:title" content="Meu Currículo - Felipe B. Freitas">
   <meta property="og:description" content="Olá seja bem-vindos ao meu currículo online.">
-  <meta property="og:image" content="https://s2-techtudo.glbimg.com/SSAPhiaAy_zLTOu3Tr3ZKu2H5vg=/0x0:1024x609/888x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_08fbf48bc0524877943fe86e43087e7a/internal_photos/bs/2022/c/u/15eppqSmeTdHkoAKM0Uw/dall-e-2.jpg">
+  <meta property="og:image" content="https://i.imgur.com/igcBIiU.jpeg">
   <meta property="og:url" content="https://igormarques2019.github.io/felipe_portfolio/">
   <meta property="og:type" content="website">
   <!-- Meta Tags de Autor -->
