--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
 
     <div class="absolute lg:relative profile-pic w-[100%] h-[100vh]">
-      <img class=" z-[0]  lg:rounded-bl-[50px] block lg:aspect-square object-cover object-center  w-[100%] h-[100%]" src="./src/img/profile/profile.jpg" alt="">
+      <img class=" z-[0]  lg:rounded-bl-[50px] block lg:aspect-square object-cover object-center  w-[100%] h-[100%]" src="./src/img/profile/profile.png" alt="">
     </div>
     <img class="block animate-bounce absolute bottom-[48px] left-[50%]  translate-x-[-50%] z-[1]" src="./src/img/icons/mouse.svg" alt="mouse_icone">
 
