--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <meta property="og:title" content="Meu Currículo - Felipe B. Freitas">
   <meta property="og:description" content="Olá seja bem-vindos ao meu currículo online.">
-  <meta property="og:image" content="https://i.imgur.com/gLzAYvj.png">
+  <meta property="og:image" content="https://i.imgur.com/DmvRsID.png">
   <meta property="og:url" content="https://igormarques2019.github.io/felipe_portfolio/">
   <meta property="og:type" content="website">
   <!-- Meta Tags de Autor -->
